@@ -5,7 +5,6 @@ import java.security.InvalidAlgorithmParameterException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.crypto.BadPaddingException;
 import javax.crypto.IllegalBlockSizeException;
@@ -27,6 +26,7 @@ import org.springframework.web.servlet.mvc.method.annotation.MvcUriComponentsBui
 import com.sbouhaddi.fileencryption.model.FileDetails;
 import com.sbouhaddi.fileencryption.service.FileStore;
 
+import jakarta.validation.constraints.NotNull;
 import lombok.RequiredArgsConstructor;
 
 @RestController
@@ -40,7 +40,7 @@ public class FileManagementController {
 	private final FileStore fileStore;
 
 	@PostMapping(value = "/upload", consumes = { "multipart/form-data" })
-	public ResponseEntity<String> uploadFile(@RequestParam("file") MultipartFile file) {
+	public ResponseEntity<String> uploadFile(@RequestParam("file") @NotNull  MultipartFile file) {
 		try {
 			fileStore.save(file);
 			return ResponseEntity.ok("File Uploaded !" + file.getOriginalFilename());
@@ -52,7 +52,7 @@ public class FileManagementController {
 	}
 
 	@GetMapping("/download/{filename:.+}")
-	public ResponseEntity<Resource> downloadFile(@PathVariable String filename) {
+	public ResponseEntity<Resource> downloadFile(@PathVariable  String filename) {
 		try {
 			Resource downloadedFile = fileStore.download(filename);
 			return ResponseEntity.ok()
@@ -76,7 +76,7 @@ public class FileManagementController {
 						.build().toString();
 				return new FileDetails(filename, url);
 
-			}).collect(Collectors.toList());
+			}).toList();
 			return ResponseEntity.ok(fileDetails);
 		} catch (IOException e) {
 			return ResponseEntity.status(HttpStatus.EXPECTATION_FAILED).build();
